<!--
  ~ Copyright (C) 2020 Asiri H.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Dots</string>
    <string name="fastest_score_text">Your fastest scores:</string>
    <string name="fastest_score_text_single">Your fastest score:</string>
    <string name="fastest_score_show">%.3f seconds @ %.3f dots per second</string>
    <string name="play_button_single">Single player</string>
    <string name="play_button_double">Head to Head</string>
    <string name="website_button">Rate this game</string>
    <string name="play_again">Play again</string>
    <string name="volume">Volume</string>
    <string name="vibrate">Vibrate</string>
    <string name="night_mode">Night mode</string>
    <string name="game_instructions">Tap the blue dots as\nthey appear on the grid.</string>
    <string name="game_instructions_double">Finish tapping the blue dots\non the grid before your opponent.</string>
    <string name="game_waiting">…</string>
    <string name="quit_message">Quitting\'s for losers…</string>
    <string name="end_message_slowest">Haha can you get any slower…</string>
    <string name="end_message_slow">Hate to see this.</string>
    <string name="end_message_mediocre">Your time ain\'t looking so hot.</string>
    <string name="end_message_aight">We respect on your name.</string>
    <string name="end_message_good">God respect on ur name.</string>
    <string name="end_message_pre_good">You play this too much.</string>
    <string name="end_message_wow">We get it, you\'re good.</string>
    <string name="end_message_no_way">If you\'re not cheating, nice.</string>
    <string name="end_message_winner">Don\'t rub it in their face, okay?</string>
    <string name="end_message_loser">Maybe just don\'t suck next time.</string>
    <string name="end_message_tie">I did not think it was possible to tie…</string>
    <string name="graph_total_time">Total time: %.3f seconds</string>
    <string name="graph_average_rate">Average rate: %.3f dots per second</string>
    <string name="graph_double_fastest">Fastest reaction time: %.3f seconds</string>
    <string name="graph_double_slowest">Slowest reaction time: %.3f seconds</string>
    <string name="graph_horizontal_title">Dot number</string>
    <string name="graph_vertical_title">Reaction time (seconds)</string>
    <string name="graph_back_button">Back to menu</string>
    <string name="leaderboard">WORLD RANKING</string>
    <string name="logotxt">M 422.6 109.001 L 437.4 102.801 Q 440.6 115.401 450.8 122.601 A 39.392 39.392 0 0 0 463.019 128.508 A 35.696 35.696 0 0 0 472.6 129.801 Q 485 129.801 493.6 122.101 Q 502.2 114.401 502.2 102.001 A 24.259 24.259 0 0 0 501.318 95.307 A 18.939 18.939 0 0 0 497.2 87.801 A 28.949 28.949 0 0 0 493.39 84.307 Q 489.137 80.993 482.337 77.545 A 122.958 122.958 0 0 0 479.6 76.201 Q 466.413 69.772 458.456 65.313 A 162.216 162.216 0 0 1 455.3 63.501 A 47.035 47.035 0 0 1 442.022 51.98 A 45.321 45.321 0 0 1 441.5 51.301 Q 436 44.001 436 33.801 Q 436 24.001 441.3 16.301 A 35.599 35.599 0 0 1 454.947 4.573 A 41.877 41.877 0 0 1 455.5 4.301 Q 464.4 0.001 474.6 0.001 Q 483.2 0.001 490.7 3.501 A 35.014 35.014 0 0 1 498.006 8.017 A 29.249 29.249 0 0 1 502.7 12.801 A 22.197 22.197 0 0 1 506.001 18.601 A 18.63 18.63 0 0 1 507.2 25.201 Q 507.2 26.201 506.8 28.601 L 491.2 27.601 Q 491.782 25.272 490.617 23.102 A 8.949 8.949 0 0 0 489.5 21.501 Q 487.004 18.606 482.615 16.907 A 24.157 24.157 0 0 0 482.6 16.901 A 26.45 26.45 0 0 0 478.169 15.6 A 20.574 20.574 0 0 0 474.2 15.201 Q 465.4 15.201 458.9 20.501 A 19.641 19.641 0 0 0 455.003 24.676 A 14.865 14.865 0 0 0 452.4 33.201 A 15.594 15.594 0 0 0 456.148 43.358 A 20.135 20.135 0 0 0 456.7 44.001 Q 461 48.801 466.8 52.301 A 146.62 146.62 0 0 0 471.408 54.959 Q 473.657 56.206 476.255 57.567 A 332.501 332.501 0 0 0 481.8 60.401 L 489 64.001 Q 504.439 72.405 511.38 80.808 A 35.637 35.637 0 0 1 511.7 81.201 A 31.199 31.199 0 0 1 518.337 97.502 A 40.903 40.903 0 0 1 518.6 102.201 A 41.667 41.667 0 0 1 515.887 117.356 A 39.022 39.022 0 0 1 512.3 124.401 Q 506 134.201 495.4 139.601 Q 484.8 145.001 472.6 145.001 Q 460.6 145.001 450 140.401 Q 439.4 135.801 432.1 127.601 Q 424.8 119.401 422.6 109.001 Z M 353.6 141.001 L 353.6 18.801 L 308.2 18.801 L 308.2 3.601 L 415.4 3.601 L 415.4 18.801 L 370 18.801 L 370 141.001 L 353.6 141.001 Z M 47.4 142.801 L 37.4 142.801 L 30.4 142.801 Q 25 142.801 11.2 141.601 L 0 140.601 L 0 2.401 L 53.4 2.601 A 72.658 72.658 0 0 1 75.048 7.226 A 65.219 65.219 0 0 1 86.5 13.001 Q 101 22.201 109 37.701 A 72.343 72.343 0 0 1 116.719 65.331 A 87.492 87.492 0 0 1 117 72.401 A 79.869 79.869 0 0 1 114.204 93.889 A 68.113 68.113 0 0 1 108.1 108.801 Q 99.2 124.801 83.4 133.801 A 68.954 68.954 0 0 1 55.425 142.43 A 85.101 85.101 0 0 1 47.4 142.801 Z M 51.2 17.801 L 16.4 17.801 L 16.4 126.801 A 397.098 397.098 0 0 0 29.254 127.547 Q 35.409 127.799 40.913 127.801 A 240.753 240.753 0 0 0 41 127.801 Q 69.8 127.801 85.2 113.601 A 45.986 45.986 0 0 0 98.611 90.4 Q 100.476 82.983 100.592 74.181 A 89.119 89.119 0 0 0 100.6 73.001 A 75.94 75.94 0 0 0 98.917 56.535 Q 95.905 42.968 87.5 33.601 Q 74.4 19.001 51.2 17.801 Z</string>
    <string name="rate_this_game">Rate this game</string>
    <string name="default_web_client_id">665044638504-69eaf1f5fageh5csjl7dv4gc9hs9ie8d.apps.googleusercontent.com</string>
</resources>
