<!--
  ~ Copyright (C) 2020 Asiri H.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    tools:context="com.viralapps.asiri.dots.game.menu.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-1300983540101573/7550736743">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="256dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo"
            app:srcCompat="@drawable/splash_logo" />

        <Button
            android:id="@+id/play_game_single"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/play_button_single" />

        <Button
            android:id="@+id/unlock_more_stuff"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/play_button_double" />

        <Button
            android:id="@+id/leaderboard"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/leaderboard" />

        <Button
            android:id="@+id/rate"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/rate_this_game" />

        <TextView
            android:id="@+id/fastest_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fastest_score_text"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/fastest_score_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fastest_score_show"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/fastest_score_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fastest_score_show"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/fastest_score_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fastest_score_show"
            android:textColor="@color/primaryTextColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/sound"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/volume"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_sound_on"
                    android:textAlignment="center" />

                <ImageButton
                    android:id="@+id/vibrate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/vibrate"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_vibrate_on" />

                <ImageButton
                    android:id="@+id/night_mode"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/night_mode"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_night_mode" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>